@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)otf.c	1.39 (gritter) 2/17/06
+ * Sccsid @(#)otf.c	1.40 (gritter) 3/3/06
  */
 
 #include <stdio.h>
@@ -2322,10 +2322,16 @@ get_OS_2(void)
 		fsType = pbe16(&contents[o+8]);
 	else
 		fsType = -1;
-	if (table_directories[pos_OS_2].length >= 98) {
+	if (table_directories[pos_OS_2].length >= 72) {
 		if (a) {
-			a->xheight = pbe16(&contents[o + 94]);
-			a->capheight = pbe16(&contents[o + 96]);
+			a->ascender = (int16_t)pbe16(&contents[o + 68]);
+			a->descender = (int16_t)pbe16(&contents[o + 70]);
+		}
+	}
+	if (table_directories[pos_OS_2].length >= 92) {
+		if (a) {
+			a->xheight = pbe16(&contents[o + 88]);
+			a->capheight = pbe16(&contents[o + 90]);
 		}
 	} else {
 	dfl:	if (a) {
