@@ -1,7 +1,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)proto.h	1.37 (gritter) 2/17/06
+ * Sccsid @(#)proto.h	1.38 (gritter) 3/3/06
  */
 
 /* t6.c */
@@ -9,6 +9,8 @@ int width(register tchar);
 void zapwcache(int);
 int getcw(register int);
 int abscw(int);
+int getascender(void);
+int getdescender(void);
 int kernadjust(tchar, tchar);
 void xbits(register tchar, int);
 tchar setch(int);
